<resources>
    <string name="app_name">ShareAboutCatsApp</string>
    <string name="login_with">Login with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="or">or</string>
    <string name="home">Home</string>
    <string name="votes">Votes</string>
    <string name="favourites">Favourites</string>
    <string name="account">Account</string>
    <string name="my_home">My Home</string>
    <string name="my_votes">My Votes</string>
    <string name="my_favourites">My Favourites</string>
    <string name="my_account">My Account</string>
    <string name="hello">Hello,</string>
    <string name="search_for_breeds">Search for breeds…</string>
    <string name="list_categories">List Categories</string>
    <string name="list_favourites">List Favourites</string>
    <string name="search_your_votes">Search your votes by ID…</string>
    <string name="search_your_favourites">Search your favourites…</string>
    <string name="user_name">User name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone number:</string>
    <string name="chat">Chat</string>
    <string name="type_your_message">Type your message…</string>
    <string name="id_show">ID:</string>
    <string name="image_id_show">Image ID:</string>
    <string name="sub_id_show">Sub ID:</string>
    <string name="user_id_show">User ID:</string>
    <string name="create_my_votes">CREATE MY VOTES</string>
    <string name="image_id">image_id:</string>
    <string name="sub_id">sub_id:</string>
    <string name="value">value:</string>
    <string name="country_code">Country code:</string>
    <string name="value_show">Value:</string>
    <string name="create_at_show">Created at:</string>
    <string name="name_show">Name:</string>
    <string name="origin_show">Origin:</string>
    <string name="description_show">Description:</string>
    <string name="life_span_show">Life span:</string>
    <string name="adaptability_show">Adaptability:</string>
    <string name="affection_level_show">Affection level:</string>
    <string name="temperament_show">Temperament:</string>
    <string name="child_friendly_show">Child friendly:</string>
    <string name="intelligence_show">Intelligence:</string>
    <string name="wikipedia_link_show">Wikipedia link:</string>
    <string name="log_out">LOG OUT</string>
    <string name="months_show">months</string>
    <string name="time_message">19:00 PM</string>
    <string name="let_get_started">Let\'s get started!</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="error_google">Google sign in failed</string>
    <string name="facebook_app_id">1007574479709466</string>
    <string name="fb_login_protocol_scheme">fb1007574479709466</string>
    <string name="x_api_key">DEMO-API-KEY</string>
    <string name="question_delete">Delete Item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="breeds_not_found">BREEDS NOT FOUND</string>
    <string name="image_not_load">THE IMAGES CAN\'T BE LOADED </string>
    <string name="a">-</string>
    <string name="loading">Loading…</string>
    <string name="api_do_not_support">API DO NOT SUPPORT</string>
    <string name="content_delete">This item will be permanently deleted from this list.</string>
    <string name="favourites_not_found">FAVOURITES NOT FOUND</string>
</resources>